[gd_scene load_steps=8 format=3 uid="uid://dpoukh6umfqtt"]

[ext_resource type="Texture2D" uid="uid://bgtmalu488h43" path="res://Assets/Images/Crosshair.png" id="1_4tng6"]
[ext_resource type="Script" path="res://Scripts/UI/control.gd" id="1_pxo3o"]
[ext_resource type="FontFile" uid="uid://1fkngn26o7r1" path="res://Assets/Playpen_Sans/static/PlaypenSans-Bold.ttf" id="3_u5728"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g3gpi"]
bg_color = Color(0.962774, 0.507513, 1.98299e-05, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.422467, 0.208891, 9.14484e-07, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24
shadow_size = 5
shadow_offset = Vector2(3, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cnw12"]
bg_color = Color(0.868411, 0.455359, 7.5084e-06, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.412825, 0.223059, 0.0321015, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24
shadow_size = 5
shadow_offset = Vector2(3, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pirag"]
bg_color = Color(0.432896, 0.214923, 4.81308e-08, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.944957, 0.497666, 1.55944e-05, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24
shadow_size = 5
shadow_offset = Vector2(3, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gu6kp"]
bg_color = Color(1, 0.7025, 0.49, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.634348, 0.325995, 2.5028e-06, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24
shadow_color = Color(0, 0, 0, 0.376471)
shadow_size = 5
shadow_offset = Vector2(3, 10)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pxo3o")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_4tng6")

[node name="EscButtons" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -230.0
offset_right = 500.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 150

[node name="Continue" type="Button" parent="EscButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 0.80785, 0.677057, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_u5728")
theme_override_font_sizes/font_size = 100
theme_override_styles/focus = SubResource("StyleBoxFlat_g3gpi")
theme_override_styles/hover = SubResource("StyleBoxFlat_cnw12")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pirag")
theme_override_styles/normal = SubResource("StyleBoxFlat_gu6kp")
text = "Continue
"

[node name="Exit" type="Button" parent="EscButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 0.80785, 0.677057, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_u5728")
theme_override_font_sizes/font_size = 100
theme_override_styles/focus = SubResource("StyleBoxFlat_g3gpi")
theme_override_styles/hover = SubResource("StyleBoxFlat_cnw12")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pirag")
theme_override_styles/normal = SubResource("StyleBoxFlat_gu6kp")
text = "Exit
"

[connection signal="pressed" from="EscButtons/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="EscButtons/Exit" to="." method="_on_exit_pressed"]
